fix: use 100dvh for liz height to prevent overflowing on browsers and ensure all images are uploaded

--- a/public/assets/liz-assistant/liz-assistant.css
+++ b/public/assets/liz-assistant/liz-assistant.css
@@ -371,3 +371,9 @@
   width: auto !important;
 }
 
+
+/* FIX MOBILE VIEWPORT HEIGHT */
+#sv-liz-panel, #sv-liz-panel.open {
+  height: calc(100dvh - 20px) !important;
+}
+
